working towards catching coordinates form trajectory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-  "cSpell.words": ["Denavit", "Hartenberg", "phid", "Praw", "subsd", "Ybood"]
+  "cSpell.words": [
+    "Brot",
+    "Denavit",
+    "Hartenberg",
+    "phid",
+    "prarob",
+    "Prarob",
+    "Praw",
+    "rclpy",
+    "subsd",
+    "traj",
+    "Unacessible",
+    "Ybood"
+  ]
 }
